--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,8 +64,7 @@ markdown_extensions:
   - admonition
   - attr_list
   - footnotes
-  - lightgallery:
-      show_description_in_lightgallery: false
+  - lightgallery
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.details
