--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,6 +55,7 @@ plugins:
   - git-revision-date-localized:
       type: timeago
       enable_creation_date: true
+      fallback_to_build_date: true
   - minify:
       minify_html: true
       minify_js: true
