--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-plugins/lightgallery-multi-image/build
-plugins/lightgallery-multi-image/dist
-plugins/lightgallery-multi-image/lightgallery.egg-info
+plugins/lightgallery-markdown-extended/build
+plugins/lightgallery-markdown-extended/dist
+plugins/lightgallery-markdown-extended/lightgallery_markdown_extended.egg-info
+
+docs/assets/images/**/*.thumbnail.*
