--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,7 +66,7 @@ markdown_extensions:
   - admonition
   - attr_list
   - footnotes
-  - lightgallery:
+  - lightgallery-markdown-extended:
       show_description_in_lightgallery: false
   - pymdownx.arithmatex:
       generic: true
