Fix CI due to missing packages

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,12 @@ jobs:
       - run: pip install mkdocs-material
       - run: pip install mkdocs-minify-plugin
       - run: pip install mkdocs-git-authors-plugin
+      - run: pip install filetype
+      - run: pip install pillow
       - name: Generate thumbnails for large images
         working-directory: ./tools
         run: python generate_thumbnails.py
       - name: Install custom lightGallery version
-        working-directory: ./plugins/lightgallery-multi-image
+        working-directory: ./plugins/lightgallery-markdown-extended
         run: python setup.py install
       - run: mkdocs gh-deploy --force
