--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       - run: pip install mkdocs-git-authors-plugin
       - run: pip install filetype
       - run: pip install pillow
+      - run: pip install titlecase
       - name: Generate thumbnails for large images
         working-directory: ./tools
         run: python generate_thumbnails.py
